# dictionary-trainer-bot

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml
bot/: __init__.py  admin.py  apps.py  commands.py  handlers.py  keyboards.py  models.py  querysets.py  responses.py  utils.py
bot/management/commands/: run_bot.py
bot/migrations/: 0001_initial.py  0002_auto_20181029_0924.py  0003_telegramlogentry_text_length.py  0004_auto_20190120_2130.py  0005_alter_telegramlogentry_id_and_more.py
ci/docker/: .env  docker-compose.yml  nginx-proxy.docker.conf
ci/local/: nginx-proxy.local.conf
dictionary/: admin.py  apps.py  exceptions.py  models.py  permissions.py  querysets.py
dictionary/fixtures/: languages.json
dictionary/management/commands/: clean.py
dictionary/migrations/: 0001_initial.py  0002_auto_20181015_1106.py  0002_fix_uppercase.py  0003_auto_20181015_1114.py
dictrainer/: settings.py  urls.py  wsgi.py
dictrainer/config/: example.yml
docker/: build.sh  deploy.sh  push.sh
docker/config/: nginx-proxy-docker.conf  nginx-proxy-docker.debug.conf
docs/: dev_notes.md
